# gba-flac-demo

./: .gitignore  .gitmodules  COPYING  Cargo.toml  Makefile  README.md  armv4t-none-eabi.json  armv5te-none-eabi.json  build.rs  compiler-builtins-pr-385-apply-patch.sh  compiler-builtins-pr-385.patch  keymap.toml  linker_script.ld  rt0.s  scratch.txt
.cargo/: config.toml
assets/gfx/: aaker-4gvSHtHgOx4-unsplash.xcf  amanda-dalbjorn-fvInY-Gh7sc-unsplash.xcf  font_white_shadowed_ascii.xcf  font_white_shadowed_ascii_ibm.xcf  hud.xcf  overlay.xcf
internal/flowergal-buildtools/: COPYING  Cargo.toml
internal/flowergal-buildtools/src/: compression.rs  lib.rs  license_text.rs  main.rs  user_interface.rs  world_data_gen.rs
internal/flowergal-buildtools/src/music/: mod.rs  pcm_conv.rs
internal/flowergal-buildtools/src/tile_generation/: image_bank.rs  map.rs  mod.rs  palette.rs  pattern.rs  sdl_support.rs  tile_pixels.rs
internal/flowergal-proj-assets/: Cargo.toml  build.rs
internal/flowergal-proj-assets/src/: lib.rs
internal/flowergal-proj-config/: Cargo.toml
internal/flowergal-proj-config/src/: lib.rs  macros.rs  sound_info.rs  world_info.rs
internal/flowergal-proj-config/src/resources/: blend.rs  mod.rs
internal/flowergal-runtime/: COPYING  COPYING-simpleflac  Cargo.toml
internal/flowergal-runtime/src/: interrupt_service.rs  lib.rs  logging.rs  memory.rs  timers.rs
internal/flowergal-runtime/src/audio/: mod.rs  raw_pcm.rs  simple_flac.rs
internal/flowergal-runtime/src/render/: mod.rs  palette.rs
src/: hud.rs  main.rs  world.rs
