[package]
name = "flac-demo"
version = "0.1.0"
authors = ["lifning"]
edition = "2018"

[workspace]

[profile.release]
lto = true
# we prob don't want "z" because that turns off loop vectorization (`stmia`, right?)
# 3 might not account for slow ROM accesses generally meaning more code = slower
opt-level = 3
panic = "abort"
incremental = false
codegen-units = 1
overflow-checks = false

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
incremental = false
codegen-units = 1

#[package.metadata.cargo-xbuild]
#memcpy = false

[build-dependencies]
bindgen = "^0.53"
flowergal-buildtools = { path = "internal/flowergal-buildtools" }

[dependencies]
gba = { path = "external/gba" }
voladdress = "0.2"  # version must match gba's
flowergal-runtime = { path = "internal/flowergal-runtime" }
flowergal-proj-config = { path = "internal/flowergal-proj-config" }
flowergal-proj-assets = { path = "internal/flowergal-proj-assets" }
heapless = { version = "0.5", default-features = false }
bstr = { version = "0.2", default-features = false }

[features]
bench_audio = [ "flowergal-runtime/bench_audio" ]
bench_video = [ "flowergal-runtime/bench_video" ]
bench_flac = [ "flowergal-runtime/bench_flac" ]
verify_asm = [ "flowergal-runtime/verify_asm" ]
debug_bitbuffer = [ "flowergal-runtime/debug_bitbuffer" ]
supercard = [ "flowergal-runtime/supercard" ]
