[package]
name = "flowergal-proj-assets"
version = "0.1.0"
authors = ["lif <lifning+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flowergal-buildtools = { path = "../flowergal-buildtools" }

[dependencies]
flowergal-proj-config = { path = "../flowergal-proj-config" }
build_const = { version = "0.2", default-features = false }
gba = { path = "../../external/gba" }
