[package]
name = "flowergal-proj-config"
version = "0.1.0"
authors = ["lif <lifning+git@pm.me>"]
edition = "2018"

[dependencies]
#serde = { version = "^1", default-features = false, features = ["derive"] }
#smallvec = { path = "../../external/rust-smallvec", default-features = false, features = ["serde"] }
#arraystring = { path = "../../external/arraystring", default-features = false, features = ["impl-all", "serde-traits"] }
heapless = { version = "0.5", default-features = false, features = ["serde"] }
gba = { path = "../../external/gba" }
fixed = { version = "1", default-features = false }
serde = { version = "*", default-features = false }
static_assertions = "1.1"
