[package]
name = "flowergal-runtime"
version = "0.1.0"
authors = ["lif <lifning+git@pm.me>"]
edition = "2018"
license = "BSD-3-Clause AND MIT"
# license-file = "COPYING"

[dependencies]
flowergal-proj-config = { path = "../flowergal-proj-config" }
gba = { path = "../../external/gba" }
heapless = { version = "0.5", default-features = false }

[features]
bench_audio = []
bench_video = []
bench_flac = []
debug_bitbuffer = []
flexible_flac = []
detect_silence = []
verify_asm = []
supercard = []
